plugins {
    id 'java'
    id 'maven-publish'
    id 'com.diffplug.spotless' version '7.2.1'
    id 'org.sonarqube' version '6.2.0.5505'
    id 'jacoco'
}

repositories {
    mavenLocal()
    mavenCentral()
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter:[5.14.4,)'
    testImplementation 'org.hamcrest:hamcrest-core:[3.0,)'
    testImplementation 'org.zapodot:embedded-db-junit-jupiter:[2.2.3,)'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher:[1.14.4,)'
}

test {
    useJUnitPlatform()
    maxParallelForks = Runtime.runtime.availableProcessors()
}

group = 'com.github.javadev'
version = '1.49-SNAPSHOT'
description = 'leetcode-in-java'
java.sourceCompatibility = JavaVersion.VERSION_25

java {
    withSourcesJar()
    withJavadocJar()
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

spotless {
    java {
        encoding 'UTF-8'
        target fileTree(projectDir) {
            include '**/src/**/*.java'
            exclude '**/build/**'
        }
        importOrder '\\#', '', '*'
        removeUnusedImports()
        googleJavaFormat('1.30.0').aosp()
        toggleOffOn()
        endWithNewline()
    }
}

jacocoTestReport {
    reports {
        xml.required = true
        html.required = false
    }
}
